--- a/src/todos/TodoListItem.css
+++ b/src/todos/TodoListItem.css
@@ -1,5 +1,5 @@
 .todo-item-container {
-    background: #fff;
+    background: #444444;
     border-radius: 8px;
     margin-top: 8px;
     padding: 16px;
